# c--

./: CMakeLists.txt  README.md  RunMe.bat  calculateStatistics.cpp  calculateStatistics.h  failas.cpp  failas.h  generateFile.cpp  generateFile.h  generuoti.cpp  generuoti.h  ivesti.cpp  ivesti.h  listCalculateStatistics.cpp  listCalculateStatistics.h  listSortStudents.cpp  listSortStudents.h  listStrat.cpp  listStrat.h  listfailas.cpp  listfailas.h  main.cpp  printResults.cpp  printResults.h  sortStudents.cpp  sortStudents.h  strat.cpp  strat.h  studentai.h  v0.1
